#F-163 Fixed i18n for Units does not work: simplify code